Fix buttons height on ios device

--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,11 @@ button {
   padding: 0;
 }
 
+.btn {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 input {
   font-size: 14px;
   padding-top: 5px;
